; ModuleID = '/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-pic32-evic.c_pic32_bind_evic_interrupt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/irqchip/extr_irq-pic32-evic.c_pic32_bind_evic_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@evic_base = common dso_local global i64 0, align 8
@REG_OFF_OFFSET = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @pic32_bind_evic_interrupt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pic32_bind_evic_interrupt(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = load i64, i64* @evic_base, align 8
  %7 = load i64, i64* @REG_OFF_OFFSET, align 8
  %8 = add nsw i64 %6, %7
  %9 = load i32, i32* %3, align 4
  %10 = mul nsw i32 %9, 4
  %11 = sext i32 %10 to i64
  %12 = add nsw i64 %8, %11
  %13 = call i32 @writel(i32 %5, i64 %12)
  ret void
}

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
